[package]
authors = ["ostrosco <ostrosco@fastmail.fm>"]
edition = "2018"
readme = "README.md"
name = "atomic-clock"
version = "0.1.0"

[dependencies]
as-slice = "0.1"
cortex-m = "0.6"
cortex-m-rt = "0.6"
embedded-hal = "0.2"
lazy_static = { version = "1", features = ["spin_no_std"] }
panic-halt = "0.2"
nb = "1"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
[dependencies.stm32f1xx-hal]
features = ["stm32f103", "rt"]
version = "0.6.1"

# this lets you use `cargo fix`!
[[bin]]
name = "atomic-clock"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
panic = "abort"
